@@ -35,7 +35,15 @@ Index: xterm/terminfo
 ===================================================================
 --- xterm.orig/terminfo
 +++ xterm/terminfo
-@@ -1970,4 +1970,4 @@ xterm|X11 terminal emulator,
+@@ -1963,11 +1963,11 @@ xterm-r5|xterm R5 version,
+ # This is the only entry which you should have to customize, since "xterm"
+ # is widely used for a variety of incompatible terminal emulations including
+ # color_xterm and rxvt.
+-xterm|X11 terminal emulator,
++xterm|xterm-debian|X11 terminal emulator,
+ 	use=xterm-new,
+ #	use=xterm-r6,
+ 
  # This fragment is for people who cannot agree on what the backspace key
  # should send.
  xterm+kbs|fragment for backspace key,
